--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@ body::-webkit-scrollbar {
 h1,
 h2,
 h3,
-a {
+a,
+p {
   color: #676417;
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
@@ -40,23 +41,15 @@ h3 {
   padding-top: 0.9vw;
 }
 
+p {
+  font-size: 1vw;
+  line-height: 1.5vw;
+}
+
 a {
   text-transform: uppercase;
   font-size: 1.2vw;
   text-decoration: none;
-  cursor: pointer;
-}
-
-.knap {
-  text-transform: uppercase;
-  color: #f4fdc1;
-  background-color: #999750;
-  border: none;
-  border-radius: 20px;
-  font-size: 1.2vw;
-  font-weight: 100;
-  padding: 0.8%;
-  font-family: "Montserrat", sans-serif;
   cursor: pointer;
 }
 
@@ -111,6 +104,16 @@ nav {
 
 #kontaktKnap {
   margin-left: 14vw;
+  text-transform: uppercase;
+  color: #f4fdc1;
+  background-color: #999750;
+  border: none;
+  border-radius: 20px;
+  font-size: 1.2vw;
+  font-weight: 100;
+  padding: 0.8%;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
 }
 
 #forsidegif {
@@ -125,7 +128,7 @@ nav {
 /*OM MIG*/
 #omMig {
   position: relative;
-  height: 400vh;
+  height: 500vh;
   z-index: 1;
   background-color: #f4fdc1;
 }
@@ -141,8 +144,9 @@ nav {
 }
 
 #omMigTekst {
-  width: 50%;
+  width: 35%;
   padding-left: 7vw;
+  margin-right: 12.5vw;
 }
 
 /*UDTALELSE*/
@@ -172,5 +176,80 @@ h3 {
 
 /*PROJEKTER*/
 #projekter {
+  margin-top: 8vw;
   margin-left: 14.7vw;
+}
+
+#kfm,
+#nippon {
+  width: 100%;
+  display: flex;
+  padding-bottom: 11.6vw;
+}
+
+#urtekram {
+  width: 100%;
+  display: flex;
+}
+
+.projektBeskrivelse {
+  width: 38%;
+}
+
+.projektBeskrivelse h2 {
+  padding-bottom: 2vw;
+}
+
+.projektBeskrivelse p {
+  padding-bottom: 1.4vw;
+}
+
+.pil {
+  width: 2.5%;
+  padding-left: 0.5vw;
+  color: #676417;
+}
+
+.seMereKnap {
+  width: 10.4vw;
+  text-transform: uppercase;
+  color: #f4fdc1;
+  background-color: #999750;
+  border: none;
+  border-radius: 20px;
+  font-size: 1.2vw;
+  font-weight: 100;
+  padding-top: 0.8vw;
+  padding-bottom: 0.8vw;
+  margin-top: 1vw;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+}
+
+.mockup {
+  width: 50%;
+  padding-top: 3.8vw;
+  padding-left: 4vw;
+}
+
+.mockupLap {
+  width: 65.6%;
+}
+.mockupMob {
+  width: 14.5%;
+  padding-left: 2vw;
+}
+/*KONTAKT*/
+#kontakt {
+  margin-top: 2vw;
+}
+
+#kontaktImg {
+  width: 25%;
+  margin-left: 14.6vw;
+  padding-top: 8vw;
+}
+
+#kontaktTekst {
+  padding-left: 14.8vw;
 }
