--- a/src/App.css
+++ b/src/App.css
@@ -12,283 +12,883 @@ body::-webkit-scrollbar {
   width: 0;
 }
 
-/*FONT REGLER*/
-h1,
-h2,
-h3,
-a,
-p {
-  color: #676417;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 100;
+/* Store skærme (desktops) */
+@media (min-width: 1024px) {
+  /* ... */
+
+  /*FONT REGLER*/
+  h1,
+  h2,
+  h3,
+  a,
+  p {
+    color: #676417;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 100;
+  }
+
+  h1 {
+    text-transform: uppercase;
+    font-size: 6vw;
+    padding-bottom: 3vw;
+    padding-top: 7.1vw;
+  }
+
+  h2 {
+    text-transform: uppercase;
+    font-size: 1.2vw;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    font-size: 1vw;
+    padding-top: 0.9vw;
+  }
+
+  p {
+    font-size: 1vw;
+    line-height: 1.5vw;
+  }
+
+  a {
+    text-transform: uppercase;
+    font-size: 1.2vw;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /*NAVIGATION*/
+  nav {
+    display: flex;
+    background-color: rgb(244, 253, 193, 0.7);
+    position: fixed;
+    width: 100%;
+    height: 5.5vw;
+    z-index: 5;
+  }
+
+  #logo {
+    width: 60%;
+    margin-left: 2vw;
+    margin-top: 1vw;
+  }
+
+  #logo img {
+    width: 12%;
+  }
+
+  #logoMobil {
+    display: none;
+  }
+
+  #menupunkter {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 10vw;
+  }
+
+  /*FORSIDE*/
+  #forside {
+    background-image: url("images/baggrund.svg");
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    height: 100vw;
+
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+
+  #velkommen {
+    margin-left: 14.7vw;
+    padding-top: 17vw;
+  }
+
+  #velkommen h2 {
+    padding-bottom: 3vw;
+  }
+
+  #kontaktKnap {
+    margin-left: 14vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.2vw;
+    font-weight: 100;
+    padding: 0.8%;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
+
+  #forsidegif {
+    width: 45%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 5.5vw;
+    margin-top: 4.9vw;
+  }
+
+  /*OM MIG*/
+  #omMig {
+    position: relative;
+    height: 100vw;
+    z-index: 1;
+    background-color: #f4fdc1;
+  }
+
+  .toKolonner {
+    display: flex;
+  }
+
+  #omMigImg {
+    width: 40%;
+    margin-left: 10.5vw;
+    padding-top: 8vw;
+  }
+
+  #omMigTekst {
+    width: 35%;
+    padding-left: 7vw;
+    margin-right: 12.5vw;
+  }
+
+  /*UDTALELSE*/
+
+  .tekstIMidten {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2vw;
+    padding-top: 10vw;
+  }
+
+  #udtalelse {
+    display: flex;
+  }
+
+  #stregLeft,
+  #stregRight {
+    width: 10%;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .citatLeft,
+  .citatRight {
+    width: 5%;
+  }
+
+  .citatLeft {
+    padding-bottom: 1.5vw;
+  }
+
+  .citatRight {
+    margin-left: 56.2vw;
+  }
+
+  /*TOOLS*/
+  .tools,
+  h3 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .tools img {
+    width: 7vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 2.8vw;
+  }
+
+  /*PROJEKTER*/
+  #projekter {
+    margin-top: 8vw;
+    margin-left: 14.7vw;
+  }
+
+  #kfm,
+  #nippon {
+    width: 100%;
+    display: flex;
+    padding-bottom: 11.6vw;
+  }
+
+  #urtekram {
+    width: 100%;
+    display: flex;
+  }
+
+  .projektBeskrivelse {
+    width: 38%;
+  }
+
+  .projektBeskrivelse h2 {
+    padding-bottom: 2vw;
+  }
+
+  .projektBeskrivelse p {
+    padding-bottom: 1.4vw;
+  }
+
+  .pil {
+    width: 2.5%;
+    padding-left: 0.5vw;
+    color: #676417;
+  }
+
+  .seMereKnap {
+    width: 10.4vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.2vw;
+    font-weight: 100;
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    margin-top: 1vw;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
+
+  .mockup {
+    width: 50%;
+    padding-top: 3.8vw;
+    padding-left: 4vw;
+  }
+
+  .mockupLap {
+    width: 65.6%;
+  }
+  .mockupMob {
+    width: 14.5%;
+    padding-left: 2vw;
+  }
+  /*KONTAKT*/
+  #kontakt {
+    margin-top: 8vw;
+    margin-left: 4vw;
+  }
+
+  #kontaktTekst {
+    width: 35%;
+    padding-left: 11vw;
+  }
+
+  #kontaktInfo {
+    padding-left: 0.5vw;
+  }
+
+  #kontaktInfo img {
+    width: 7%;
+    padding-right: 2vw;
+  }
+
+  #kontaktInfo a {
+    display: flex;
+    align-items: center;
+    padding-top: 3vw;
+  }
+
+  #kontaktImg {
+    width: 30%;
+    margin-left: 10.5vw;
+    padding-top: 8vw;
+  }
 }
 
-h1 {
-  text-transform: uppercase;
-  font-size: 6vw;
-  padding-bottom: 3vw;
-  padding-top: 7.1vw;
+/* Mellemstore skærme (tablets) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* ... */
+  /*FONT REGLER*/
+  h1,
+  h2,
+  h3,
+  a,
+  p {
+    color: #676417;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 100;
+  }
+
+  h1 {
+    text-transform: uppercase;
+    font-size: 7vw;
+    padding-bottom: 3vw;
+    padding-top: 7.7vw;
+  }
+
+  h2 {
+    text-transform: uppercase;
+    font-size: 1.8vw;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    font-size: 1.4vw;
+    padding-top: 0.9vw;
+  }
+
+  p {
+    font-size: 1.6vw;
+    line-height: 2.3vw;
+  }
+
+  a {
+    text-transform: uppercase;
+    font-size: 1.8vw;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /*NAVIGATION*/
+  nav {
+    display: flex;
+    background-color: rgb(244, 253, 193, 0.7);
+    position: fixed;
+    width: 100%;
+    height: 8vw;
+    z-index: 5;
+  }
+
+  #logo {
+    width: 60%;
+    margin-left: 2vw;
+    margin-top: 1vw;
+  }
+
+  #logo img {
+    width: 20%;
+  }
+
+  #logoMobil {
+    display: none;
+  }
+
+  #menupunkter {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 5vw;
+  }
+
+  /*FORSIDE*/
+  #forside {
+    background-image: url("images/baggrund.svg");
+    background-size: 100vw;
+    background-repeat: no-repeat;
+    height: 56vw;
+
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+
+  #velkommen {
+    margin-left: 14.7vw;
+    padding-top: 17vw;
+  }
+
+  #velkommen h2 {
+    padding-bottom: 3.8vw;
+  }
+
+  #kontaktKnap {
+    margin-left: 14vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.8vw;
+    font-weight: 100;
+    padding: 0.8%;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
+
+  #forsidegif {
+    width: 45%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 5.5vw;
+    margin-top: 8.9vw;
+  }
+
+  /*OM MIG*/
+  #omMig {
+    position: relative;
+    height: 400vh;
+    z-index: 1;
+    background-color: #f4fdc1;
+  }
+
+  .toKolonner {
+    display: flex;
+  }
+
+  #omMigImg {
+    width: 40%;
+    margin-left: 5vw;
+    padding-top: 16vw;
+  }
+
+  #omMigTekst {
+    width: 42%;
+    padding-left: 7.5vw;
+  }
+
+  /*UDTALELSE*/
+
+  .tekstIMidten {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2vw;
+    padding-top: 10vw;
+  }
+
+  #udtalelse {
+    display: flex;
+  }
+
+  #stregLeft,
+  #stregRight {
+    width: 7%;
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+
+  .citatLeft,
+  .citatRight {
+    width: 5%;
+  }
+
+  .citatLeft {
+    padding-bottom: 1.5vw;
+  }
+
+  .citatRight {
+    margin-left: 54.5vw;
+  }
+
+  /*TOOLS*/
+  .tools,
+  h3 {
+    display: flex;
+    justify-content: center;
+  }
+
+  .tools img {
+    width: 10vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 2.8vw;
+  }
+
+  /*PROJEKTER*/
+  #projekter {
+    margin-top: 10vw;
+    margin-left: 5vw;
+  }
+
+  #kfm,
+  #nippon {
+    width: 100%;
+    display: flex;
+    padding-bottom: 11.6vw;
+  }
+
+  #urtekram {
+    width: 100%;
+    display: flex;
+  }
+
+  .projektBeskrivelse {
+    width: 38%;
+  }
+
+  .projektBeskrivelse h2 {
+    padding-bottom: 2vw;
+  }
+
+  .projektBeskrivelse p {
+    padding-bottom: 1.4vw;
+  }
+
+  .pil {
+    width: 3.5%;
+    padding-left: 0.8vw;
+    color: #676417;
+  }
+
+  .seMereKnap {
+    width: 15vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.8vw;
+    font-weight: 100;
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    margin-top: 1vw;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
+
+  .mockup {
+    width: 100%;
+    padding-top: 3.8vw;
+  }
+
+  .mockupLap {
+    width: 75%;
+  }
+  .mockupMob {
+    width: 14.5%;
+    padding-left: 2vw;
+  }
+  /*KONTAKT*/
+  #kontakt {
+    margin-top: 10vw;
+  }
+
+  #kontaktTekst {
+    width: 35%;
+    padding-left: 12.5vw;
+  }
+
+  #kontaktInfo {
+    padding-left: 0.5vw;
+  }
+
+  #kontaktInfo img {
+    width: 10%;
+    padding-right: 2vw;
+  }
+
+  #kontaktInfo a {
+    display: flex;
+    align-items: center;
+    padding-top: 5vw;
+  }
+
+  #kontaktImg {
+    width: 35%;
+    margin-left: 5vw;
+    padding-top: 8vw;
+  }
 }
 
-h2 {
-  text-transform: uppercase;
-  font-size: 1.2vw;
-}
+/* Små skærme (telefoner) */
+@media (max-width: 767px) {
+  /* ... */
+  /*FONT REGLER*/
+  h1,
+  h2,
+  h3,
+  a,
+  p {
+    color: #676417;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 100;
+  }
 
-h3 {
-  text-transform: uppercase;
-  font-size: 1vw;
-  padding-top: 0.9vw;
-}
+  h1 {
+    text-transform: uppercase;
+    font-size: 15vw;
+    padding-bottom: 3vw;
+    padding-top: 7.7vw;
+    text-align: center;
+  }
 
-p {
-  font-size: 1vw;
-  line-height: 1.5vw;
-}
+  h2 {
+    text-transform: uppercase;
+    font-size: 5vw;
+  }
 
-a {
-  text-transform: uppercase;
-  font-size: 1.2vw;
-  text-decoration: none;
-  cursor: pointer;
-}
+  h3 {
+    text-transform: uppercase;
+    font-size: 3vw;
+    padding-top: 0.9vw;
+  }
 
-/*NAVIGATION*/
-nav {
-  display: flex;
-  background-color: rgb(244, 253, 193, 0.7);
-  position: fixed;
-  width: 100%;
-  height: 5.5vw;
-  z-index: 5;
-}
+  p {
+    font-size: 3.9vw;
+    line-height: 5.8vw;
+  }
 
-#logo {
-  width: 60%;
-  margin-left: 2vw;
-  margin-top: 1vw;
-}
+  a {
+    text-transform: uppercase;
+    font-size: 5vw;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-#logo img {
-  width: 12%;
-}
+  /*NAVIGATION*/
+  nav {
+    display: flex;
+    background-color: rgb(244, 253, 193, 0.7);
+    position: fixed;
+    width: 100%;
+    height: 15vw;
+    z-index: 5;
+  }
 
-#menupunkter {
-  width: 40%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: 10vw;
-}
+  #logo {
+    display: none;
+  }
 
-/*FORSIDE*/
-#forside {
-  background-image: url("images/baggrund.svg");
-  background-size: 100vw;
-  background-repeat: no-repeat;
-  height: 100vw;
+  #logoMobil {
+    width: 25%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 2vw;
+    z-index: 5;
+  }
 
-  position: sticky;
-  top: 0;
-  left: 0;
-}
+  #logo img {
+    width: 20%;
+  }
 
-#velkommen {
-  margin-left: 14.7vw;
-  padding-top: 17vw;
-}
+  #menupunkter {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 5vw;
+    margin-left: 5vw;
+  }
 
-#velkommen h2 {
-  padding-bottom: 3vw;
-}
+  /*FORSIDE*/
+  #forside {
+    background-image: url("images/baggrundMobil.svg");
+    background-size: 170vw;
+    background-repeat: no-repeat;
+    height: 180vw;
 
-#kontaktKnap {
-  margin-left: 14vw;
-  text-transform: uppercase;
-  color: #f4fdc1;
-  background-color: #999750;
-  border: none;
-  border-radius: 20px;
-  font-size: 1.2vw;
-  font-weight: 100;
-  padding: 0.8%;
-  font-family: "Montserrat", sans-serif;
-  cursor: pointer;
-}
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
 
-#forsidegif {
-  width: 45%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-right: 5.5vw;
-  margin-top: 4.9vw;
-}
+  #velkommen {
+    text-align: center;
+    padding-top: 30vw;
+  }
 
-/*OM MIG*/
-#omMig {
-  position: relative;
-  height: 510vh;
-  z-index: 1;
-  background-color: #f4fdc1;
-}
+  #velkommen h2 {
+    padding-bottom: 5vw;
+  }
 
-.toKolonner {
-  display: flex;
-}
+  #kontaktKnap {
+    margin-left: 30vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 5vw;
+    font-weight: 100;
+    padding: 1.9vw;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
 
-#omMigImg {
-  width: 40%;
-  margin-left: 10.5vw;
-  padding-top: 8vw;
-}
+  #forsidegif {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
 
-#omMigTekst {
-  width: 35%;
-  padding-left: 7vw;
-  margin-right: 12.5vw;
-}
+    margin-top: 75vw;
+  }
 
-/*UDTALELSE*/
+  /*OM MIG*/
+  #omMig {
+    position: relative;
+    height: 400vh;
+    z-index: 1;
+    background-color: #f4fdc1;
+  }
 
-.tekstIMidten {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 2vw;
-  padding-top: 10vw;
-}
+  #omMigImg {
+    width: 90%;
+    margin-left: 5vw;
+    padding-top: 16vw;
+  }
 
-#udtalelse {
-  display: flex;
-}
+  #omMigTekst {
+    text-align: center;
+    margin-right: 5vw;
+    margin-left: 5vw;
+  }
 
-#stregLeft,
-#stregRight {
-  width: 10%;
-  margin-left: 5vw;
-  margin-right: 5vw;
-}
+  /*UDTALELSE*/
 
-.citatLeft,
-.citatRight {
-  width: 5%;
-}
+  .tekstIMidten {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15vw;
+    padding-top: 24vw;
+  }
 
-.citatLeft {
-  padding-bottom: 1.5vw;
-}
+  #udtalelse {
+    display: flex;
+    text-align: center;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
 
-.citatRight {
-  margin-left: 56.2vw;
-}
+  #stregLeft,
+  #stregRight {
+    display: none;
+  }
 
-/*TOOLS*/
-.tools,
-h3 {
-  display: flex;
-  justify-content: center;
-}
+  .citatLeft,
+  .citatRight {
+    width: 10%;
+  }
 
-.tools img {
-  width: 7vw;
-  padding-left: 3vw;
-  padding-right: 3vw;
-  padding-top: 2.8vw;
-}
+  .citatLeft {
+    padding-bottom: 1.5vw;
+    display: flex;
+  }
 
-/*PROJEKTER*/
-#projekter {
-  margin-top: 8vw;
-  margin-left: 14.7vw;
-}
+  .citatRight {
+    margin-left: 80vw;
+  }
 
-#kfm,
-#nippon {
-  width: 100%;
-  display: flex;
-  padding-bottom: 11.6vw;
-}
+  /*TOOLS*/
+  .tools,
+  h3 {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 5vw;
+  }
 
-#urtekram {
-  width: 100%;
-  display: flex;
-}
+  .tools img {
+    width: 20vw;
+    padding-left: 7vw;
+    padding-right: 7vw;
+  }
 
-.projektBeskrivelse {
-  width: 38%;
-}
+  /*PROJEKTER*/
+  #projekter {
+    padding-top: 8vw;
+    padding-bottom: 28vw;
+  }
 
-.projektBeskrivelse h2 {
-  padding-bottom: 2vw;
-}
+  #kfm,
+  #nippon {
+    display: flex;
+    flex-direction: column-reverse;
+    padding-bottom: 11.6vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
 
-.projektBeskrivelse p {
-  padding-bottom: 1.4vw;
-}
+  #urtekram {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
 
-.pil {
-  width: 2.5%;
-  padding-left: 0.5vw;
-  color: #676417;
-}
+  .projektBeskrivelse {
+    width: 100%;
+    text-align: center;
+  }
 
-.seMereKnap {
-  width: 10.4vw;
-  text-transform: uppercase;
-  color: #f4fdc1;
-  background-color: #999750;
-  border: none;
-  border-radius: 20px;
-  font-size: 1.2vw;
-  font-weight: 100;
-  padding-top: 0.8vw;
-  padding-bottom: 0.8vw;
-  margin-top: 1vw;
-  font-family: "Montserrat", sans-serif;
-  cursor: pointer;
-}
+  .projektBeskrivelse h2 {
+    padding-bottom: 2vw;
+    padding-top: 7vw;
+  }
 
-.mockup {
-  width: 50%;
-  padding-top: 3.8vw;
-  padding-left: 4vw;
-}
+  .projektBeskrivelse p {
+    padding-bottom: 3.5vw;
+  }
 
-.mockupLap {
-  width: 65.6%;
-}
-.mockupMob {
-  width: 14.5%;
-  padding-left: 2vw;
-}
-/*KONTAKT*/
-#kontakt {
-  margin-top: 8vw;
-  margin-left: 4vw;
-}
+  .pil {
+    width: 3.5%;
+    padding-left: 0.8vw;
+    color: #676417;
+  }
 
-#kontaktTekst {
-  width: 35%;
-  padding-left: 11vw;
-}
+  .seMereKnap {
+    width: 37vw;
+    text-transform: uppercase;
+    color: #f4fdc1;
+    background-color: #999750;
+    border: none;
+    border-radius: 20px;
+    font-size: 5.5vw;
+    font-weight: 100;
+    padding-top: 1.4vw;
+    padding-bottom: 1.4vw;
+    margin-top: 1vw;
+    font-family: "Montserrat", sans-serif;
+    cursor: pointer;
+  }
 
-#kontaktInfo {
-  padding-left: 0.5vw;
-}
+  .mockup {
+    width: 100%;
+    padding-top: 3.8vw;
+  }
 
-#kontaktInfo img {
-  width: 7%;
-  padding-right: 2vw;
-}
+  .mockupLap {
+    width: 100%;
+  }
+  .mockupMob {
+    width: 20%;
+    position: absolute;
+    left: 0;
+    margin-left: 74vw;
+    margin-top: 15vw;
+  }
 
-#kontaktInfo a {
-  display: flex;
-  align-items: center;
-  padding-top: 3vw;
-}
+  /*KONTAKT*/
+  #kontakt {
+    padding-bottom: 3vw;
+  }
 
-#kontaktImg {
-  width: 30%;
-  margin-left: 10.5vw;
-  padding-top: 8vw;
+  #kontaktTekst {
+    width: 90%;
+    text-align: center;
+    margin-left: 5vw;
+  }
+
+  #kontaktInfo img {
+    width: 10%;
+    margin-left: 2vw;
+    padding-right: 5vw;
+  }
+
+  #kontaktInfo a {
+    display: flex;
+    align-items: center;
+    padding-top: 5vw;
+  }
+
+  #kontaktImg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #kontaktImg img {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+  }
 }
