--- a/src/App.css
+++ b/src/App.css
@@ -272,12 +272,13 @@ body::-webkit-scrollbar {
   /*KONTAKT*/
   #kontakt {
     margin-top: 8vw;
-    margin-left: 4vw;
+
+    padding-bottom: 10vw;
   }
 
   #kontaktTekst {
     width: 35%;
-    padding-left: 11vw;
+    padding-left: 7vw;
   }
 
   #kontaktInfo {
@@ -296,7 +297,7 @@ body::-webkit-scrollbar {
   }
 
   #kontaktImg {
-    width: 30%;
+    width: 37%;
     margin-left: 10.5vw;
     padding-top: 8vw;
   }
@@ -425,9 +426,10 @@ body::-webkit-scrollbar {
   /*OM MIG*/
   #omMig {
     position: relative;
-    height: 400vh;
+    height: 100vw;
     z-index: 1;
     background-color: #f4fdc1;
+    padding-top: 5vw;
   }
 
   .toKolonner {
@@ -494,7 +496,8 @@ body::-webkit-scrollbar {
 
   /*PROJEKTER*/
   #projekter {
-    margin-top: 10vw;
+    padding-top: 5vw;
+    padding-bottom: 10vw;
     margin-left: 5vw;
   }
 
@@ -558,12 +561,12 @@ body::-webkit-scrollbar {
   }
   /*KONTAKT*/
   #kontakt {
-    margin-top: 10vw;
+    padding-bottom: 30vw;
   }
 
   #kontaktTekst {
     width: 35%;
-    padding-left: 12.5vw;
+    padding-left: 7.5vw;
   }
 
   #kontaktInfo {
@@ -582,7 +585,7 @@ body::-webkit-scrollbar {
   }
 
   #kontaktImg {
-    width: 35%;
+    width: 39.7%;
     margin-left: 5vw;
     padding-top: 8vw;
   }
@@ -722,8 +725,8 @@ body::-webkit-scrollbar {
   }
 
   #omMigImg {
-    width: 90%;
-    margin-left: 5vw;
+    width: 69%;
+    margin-left: 16vw;
     padding-top: 16vw;
   }
 
@@ -887,7 +890,7 @@ body::-webkit-scrollbar {
   }
 
   #kontaktImg img {
-    width: 50%;
+    width: 69%;
     display: flex;
     justify-content: center;
   }
