--- a/src/App.css
+++ b/src/App.css
@@ -173,12 +173,23 @@ body::-webkit-scrollbar {
     padding-top: 10vw;
   }
 
-  #udtalelse {
+  .udtalelse {
     display: flex;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
   }
 
-  #stregLeft,
-  #stregRight {
+  .udtalelse p {
+    padding-bottom: 1.4vw;
+  }
+
+  .fedTekst {
+    font-weight: 900;
+    padding-top: 2vw;
+  }
+
+  .stregLeft,
+  .stregRight {
     width: 10%;
     margin-left: 5vw;
     margin-right: 5vw;
@@ -465,12 +476,23 @@ body::-webkit-scrollbar {
     padding-top: 10vw;
   }
 
-  #udtalelse {
+  .udtalelse {
     display: flex;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
   }
 
-  #stregLeft,
-  #stregRight {
+  .udtalelse p {
+    padding-bottom: 2vw;
+  }
+
+  .fedTekst {
+    font-weight: 900;
+    padding-top: 3vw;
+  }
+
+  .stregLeft,
+  .stregRight {
     width: 7%;
     margin-left: 2vw;
     margin-right: 2vw;
@@ -486,7 +508,7 @@ body::-webkit-scrollbar {
   }
 
   .citatRight {
-    margin-left: 54.5vw;
+    margin-left: 73.5vw;
   }
 
   /*TOOLS*/
@@ -557,12 +579,13 @@ body::-webkit-scrollbar {
   }
 
   .mockup {
-    width: 100%;
+    width: 80%;
     padding-top: 3.8vw;
   }
 
   .mockupLap {
-    width: 75%;
+    width: 68%;
+    padding-left: 4.4vw;
   }
   .mockupMob {
     width: 14.5%;
@@ -763,15 +786,25 @@ body::-webkit-scrollbar {
     padding-top: 24vw;
   }
 
-  #udtalelse {
+  .udtalelse {
     display: flex;
     text-align: center;
     margin-left: 5vw;
     margin-right: 5vw;
+    padding-bottom: 7vw;
   }
 
-  #stregLeft,
-  #stregRight {
+  .udtalelse p {
+    padding-bottom: 6vw;
+  }
+
+  .fedTekst {
+    font-weight: 900;
+    padding-top: 7vw;
+  }
+
+  .stregLeft,
+  .stregRight {
     display: none;
   }
 
@@ -787,6 +820,7 @@ body::-webkit-scrollbar {
 
   .citatRight {
     margin-left: 80vw;
+    padding-top: 2vw;
   }
 
   /*TOOLS*/
