--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   background-color: #f4fdc1;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 body::-webkit-scrollbar {
@@ -650,6 +651,7 @@ h3 {
   }
 
   #logoMobil {
+    display: block;
     width: 25%;
     position: fixed;
     bottom: 0;
