--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 body {
   background-color: #f4fdc1;
   overflow-x: hidden;
-  width: 100vw;
 }
 
 body::-webkit-scrollbar {
@@ -50,7 +49,7 @@ nav {
   display: flex;
   background-color: rgb(244, 253, 193, 0.7);
   position: fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 5;
 }
 
@@ -655,8 +654,8 @@ h3 {
     width: 25%;
     position: fixed;
     bottom: 0;
-    right: 0;
-    margin-right: 2vw;
+    left: 0;
+    margin-left: 74vw;
     z-index: 5;
   }
 
@@ -669,7 +668,7 @@ h3 {
   }
 
   #menupunkter {
-    width: 100%;
+    width: 100vw;
     margin-right: 5vw;
     margin-left: 5vw;
   }
