--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,6 @@ nav {
   margin-top: 1vw;
 }
 
-#logoMobil {
-  display: none;
-}
-
 nav h2 {
   position: absolute;
 }
@@ -433,6 +429,10 @@ h3 {
     width: 20%;
   }
 
+  #logoMobil {
+    display: none;
+  }
+
   nav h2 {
     margin-left: 14vw;
     margin-top: 3vw;
@@ -461,10 +461,6 @@ h3 {
     margin-left: 14vw;
     font-size: 1.8vw;
     padding: 0.8%;
-  }
-
-  #gif {
-    width: 100vw;
   }
 
   #forsidegif {
@@ -655,12 +651,11 @@ h3 {
   }
 
   #logoMobil {
-    display: block;
     width: 25%;
     position: fixed;
     bottom: 0;
-    right: 0;
-    margin-right: 2vw;
+    left: 0;
+    margin-left: 74vw;
     z-index: 5;
   }
 
@@ -706,12 +701,8 @@ h3 {
     padding: 1.9vw;
   }
 
-  #gif {
-    width: 100vw;
-  }
-
   #forsidegif {
-    width: 190vw;
+    width: 190%;
     margin-left: -39.2vw;
     margin-top: 73vw;
   }
