--- a/src/App.css
+++ b/src/App.css
@@ -620,7 +620,6 @@ h3 {
   h1 {
     font-size: 15vw;
     padding-top: 7.7vw;
-    text-align: center;
   }
 
   h2 {
@@ -654,13 +653,9 @@ h3 {
     width: 25%;
     position: fixed;
     bottom: 0;
-    left: 0;
-    margin-left: 74vw;
+    right: 0;
+    margin-left: 2vw;
     z-index: 5;
-  }
-
-  #logo img {
-    width: 20%;
   }
 
   nav h2 {
@@ -714,13 +709,12 @@ h3 {
   }
 
   #omMigImg {
-    width: 69%;
-    margin-left: 16vw;
+    width: 91.5%;
+    margin-left: 5vw;
     padding-top: 16vw;
   }
 
   #omMigTekst {
-    text-align: center;
     margin-right: 5vw;
     margin-left: 5vw;
   }
@@ -734,7 +728,6 @@ h3 {
 
   .udtalelse {
     display: flex;
-    text-align: center;
     margin-left: 5vw;
     margin-right: 5vw;
     padding-bottom: 7vw;
@@ -746,6 +739,7 @@ h3 {
 
   .fedTekst {
     padding-top: 7vw;
+    text-align: center;
   }
 
   .stregLeft,
@@ -801,7 +795,6 @@ h3 {
 
   .projektBeskrivelse {
     width: 100%;
-    text-align: center;
   }
 
   .projektBeskrivelse h2 {
@@ -845,17 +838,16 @@ h3 {
   /*KONTAKT*/
   #kontakt {
     padding-bottom: 3vw;
+    padding-top: 15vw;
   }
 
   #kontaktTekst {
     width: 90%;
-    text-align: center;
     margin-left: 5vw;
   }
 
   #kontaktInfo img {
     width: 10%;
-    margin-left: 2vw;
     padding-right: 5vw;
   }
 
@@ -870,7 +862,7 @@ h3 {
   }
 
   #kontaktImg img {
-    width: 69%;
+    width: 91.5%;
     display: flex;
     justify-content: center;
   }
