--- a/src/App.css
+++ b/src/App.css
@@ -650,12 +650,16 @@ h3 {
   }
 
   #logoMobil {
-    width: 25%;
+    width: 100%;
     position: fixed;
     bottom: 0;
-    right: 0;
-    margin-left: 2vw;
     z-index: 5;
+  }
+
+  #logoMobil img {
+    width: 25%;
+    position: relative;
+    margin-left: 73vw;
   }
 
   nav h2 {
