--- a/src/App.css
+++ b/src/App.css
@@ -232,8 +232,8 @@ h3 {
   }
 
   #forsidegif {
-    width: 85%;
-    margin-left: 32vw;
+    width: 39%;
+    margin-left: 55vw;
     margin-top: 4.7vw;
   }
 
@@ -464,9 +464,9 @@ h3 {
   }
 
   #forsidegif {
-    width: 85%;
-    margin-left: 32.1vw;
-    margin-top: 8.5vw;
+    width: 39%;
+    margin-left: 55vw;
+    margin-top: 9vw;
   }
 
   /*OM MIG*/
@@ -650,16 +650,12 @@ h3 {
   }
 
   #logoMobil {
-    width: 100%;
+    width: 25%;
     position: fixed;
     bottom: 0;
+    right: 0;
+    margin-right: 1vw;
     z-index: 5;
-  }
-
-  #logoMobil img {
-    width: 25%;
-    position: relative;
-    margin-left: 73vw;
   }
 
   nav h2 {
@@ -701,8 +697,8 @@ h3 {
   }
 
   #forsidegif {
-    width: 190%;
-    margin-left: -39.2vw;
+    width: 87%;
+    margin-left: 11vw;
     margin-top: 73vw;
   }
 
